--- a/elapp/src/main/res/layout/item_seach_stock.xml
+++ b/elapp/src/main/res/layout/item_seach_stock.xml
@@ -36,6 +36,17 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="30dp"
         android:visibility="visible" />
+    <TextView
+        android:id="@+id/tv_add_complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="30dp"
+        android:text="@string/added"
+        android:textColor="@color/vip_text"
+        android:visibility="gone" />
+
 
     <View
         android:layout_width="match_parent"
