--- a/elapp/src/main/res/layout/activity_image_text_live.xml
+++ b/elapp/src/main/res/layout/activity_image_text_live.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="206dp"
         android:fitsSystemWindows="true"
-        app:elevation="0dp">
+        app:elevation="0dp"
+        >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/CollapsingToolbarLayout"
@@ -100,6 +101,7 @@
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                app:contentInsetStart="0dp"
                 app:layout_collapseMode="pin">
 
                 <RelativeLayout
@@ -110,6 +112,7 @@
                         android:id="@+id/iv_back"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
+                        android:layout_marginLeft="12dp"
                         android:layout_centerVertical="true"
                         android:scaleType="center"
                         android:src="@drawable/live_icon_more_back" />
