--- a/elapp/src/main/res/layout/item_market_select_title.xml
+++ b/elapp/src/main/res/layout/item_market_select_title.xml
@@ -16,7 +16,8 @@
             android:layout_height="43dp"
             android:layout_weight="1"
             android:background="@color/white"
-            android:gravity="center"
+            android:gravity="center|left"
+            android:paddingLeft="24dp"
             android:text="名称"
             android:textColor="@color/text_color_gray"
             android:textSize="16sp" />
@@ -36,10 +37,10 @@
             android:layout_width="0dp"
             android:layout_height="43dp"
             android:layout_weight="1"
+            android:paddingLeft="6dp"
             android:background="@color/white"
-            android:gravity="center"
+            android:gravity="center|left"
             android:text="涨跌幅"
-            android:paddingRight="10dp"
             android:textColor="@color/text_color_gray"
             android:textSize="16sp" />
 
