--- a/elapp/src/main/res/layout/activity_search.xml
+++ b/elapp/src/main/res/layout/activity_search.xml
@@ -17,7 +17,7 @@
         <EditText
             android:id="@+id/et_search"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
+            android:layout_height="32dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="16dp"
@@ -57,7 +57,7 @@
             android:paddingTop="14dp"
             android:text="@string/cancel"
             android:textColor="@color/text_color_purplish"
-            android:textSize="@dimen/text_size_title_h2" />
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <ImageView
