--- a/elapp/src/main/res/layout/fragment_market_optional.xml
+++ b/elapp/src/main/res/layout/fragment_market_optional.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/list_divider_bg"
+    android:background="#f7f7f7"
     android:orientation="vertical">
 
     <android.support.v4.widget.Space
         android:id="@+id/stock_space"
         android:layout_width="match_parent"
-        android:layout_height="10dp" />
+        android:layout_height="4dp"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/stock_refresh"
@@ -23,9 +24,18 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/stock_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
 
-            <include layout="@layout/layout_empty" />
+            <ImageView
+                android:id="@+id/optional_edit"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="bottom|right"
+                android:layout_marginBottom="66dp"
+                android:layout_marginRight="16dp"
+                android:src="@drawable/logo"/>
+
+            <include layout="@layout/layout_empty"/>
 
         </FrameLayout>
 
