--- a/elapp/src/main/res/layout/item_market_select_title.xml
+++ b/elapp/src/main/res/layout/item_market_select_title.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -7,42 +8,41 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
+        android:layout_marginLeft="22dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="0dp"
-            android:layout_height="43dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center|left"
-            android:paddingLeft="24dp"
             android:text="名称"
             android:textColor="@color/text_color_gray"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="0dp"
-            android:layout_height="43dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/white"
-            android:gravity="center"
-            android:text="现价"
-            android:textColor="@color/text_color_gray"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="43dp"
-            android:layout_weight="1"
-            android:paddingLeft="16dp"
             android:background="@color/white"
             android:gravity="center|left"
+            android:text="现价"
+            android:textColor="@color/text_color_gray"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:gravity="center|left"
+            android:paddingLeft="10dp"
             android:text="涨跌幅"
             android:textColor="@color/text_color_gray"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
@@ -50,4 +50,5 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/default_line_color"/>
+
 </LinearLayout>
