--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -178,7 +178,8 @@
     <color name="input_bg">#80303030</color>
     <color name="vip_text">#672f87</color>
     <color name="fire_eyeballs_color">#ff6820</color>
-    <color name="tab_text_color">#aaaaaa</color>>
+    <color name="tab_text_color">#aaaaaa</color>
+    <color name="tab_text_color_selected">#622d80</color>
 
     <color name="f8f8f8">#f8f8f8</color>
 
