--- a/elapp/src/main/res/drawable/selector_selected_btn_state.xml
+++ b/elapp/src/main/res/drawable/selector_selected_btn_state.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/market_add_normal" android:state_selected="false" />
-    <item android:drawable="@drawable/market_add_selected" android:state_selected="true" />
+    <item android:drawable="@drawable/btn_market_n" android:state_selected="false" />
+    <item android:drawable="@drawable/btn_market_s" android:state_selected="true" />
 </selector>
