--- a/elapp/src/main/res/layout/activity_web_detail.xml
+++ b/elapp/src/main/res/layout/activity_web_detail.xml
@@ -63,41 +63,49 @@
         android:id="@+id/rl_bottom_stock"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:visibility="gone"
         android:layout_alignParentBottom="true"
         android:background="@android:color/white">
+
+
+        <ImageView
+            android:id="@+id/tv_stock_add"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
+            android:layout_toLeftOf="@+id/tv_stock_share"
+            android:src="@drawable/selector_selected_btn_state"
+           />
+
+        <ImageView
+            android:id="@+id/tv_stock_share"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
+            android:layout_toLeftOf="@+id/tv_stock_refresh"
+            android:src="@drawable/btn_share_n"
+           />
+
+        <ImageView
+            android:id="@+id/tv_stock_refresh"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/btn_market_refresh_g_n"
+           />
 
         <TextView
             android:id="@+id/tv_stock_comment_hint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_toLeftOf="@+id/tv_add"
+            android:layout_margin="5dp"
+            android:layout_toLeftOf="@id/tv_stock_add"
             android:gravity="center_vertical"
-            android:text="@string/stock_detail_chat_hint"/>
-
-        <TextView
-            android:id="@+id/tv_stock_add"
-            style="@style/MarketDetailButtonStyle"
-            android:layout_marginRight="42dp"
-            android:layout_toLeftOf="@+id/tv_stock_share"
-            android:drawableTop="@drawable/selector_selected_btn_state"
-            android:text="@string/add_stock_btn"/>
-
-        <TextView
-            android:id="@+id/tv_stock_share"
-            style="@style/MarketDetailButtonStyle"
-            android:layout_marginRight="42dp"
-            android:layout_toLeftOf="@+id/tv_stock_refresh"
-            android:drawableTop="@drawable/icon_share"
-            android:text="@string/share"/>
-
-        <TextView
-            android:id="@+id/tv_stock_refresh"
-            style="@style/MarketDetailButtonStyle"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="17dp"
-            android:drawableTop="@drawable/market_refresh_gray"
-            android:text="@string/refresh"/>
+            android:paddingLeft="10dp"
+            android:background="@drawable/shape_chat_input_bg"
+            android:hint="@string/stock_detail_chat_hint"/>
 
         <View
             android:layout_width="match_parent"
@@ -111,56 +119,61 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:background="@android:color/white"
-        android:visibility="gone">
+        android:visibility="visible">
 
-        <TextView
-            android:id="@+id/tv_news_comment_hint"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_toLeftOf="@+id/tv_add"
-            android:gravity="center_vertical"
-            android:text="@string/stock_detail_chat_hint"/>
 
-        <TextView
+        <ImageView
             android:id="@+id/tv_news_share"
-            style="@style/MarketDetailButtonStyle"
-            android:layout_marginRight="42dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
             android:layout_toLeftOf="@+id/tv_news_collect"
-            android:drawableTop="@drawable/icon_share"
-            android:text="@string/share"/>
+            android:src="@drawable/btn_share_n"
+            />
 
-        <TextView
+        <ImageView
             android:id="@+id/tv_news_collect"
-            style="@style/MarketDetailButtonStyle"
-            android:layout_marginRight="42dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="12dp"
             android:layout_toLeftOf="@+id/tv_news_comment"
-            android:drawableTop="@drawable/selector_news_collect"
-            android:text="@string/collect"/>
+            android:src="@drawable/selector_news_collect"
+           />
 
-        <TextView
+        <ImageView
             android:id="@+id/tv_news_comment"
-            style="@style/MarketDetailButtonStyle"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="17dp"
-            android:drawableTop="@drawable/btn_news_comment_n"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/btn_news_comment_n"
             android:text="@string/comment"/>
 
         <TextView
             android:id="@+id/tv_news_comment_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@id/tv_news_comment"
+            android:layout_toRightOf="@id/tv_news_comment"
             android:layout_alignTop="@id/tv_news_comment"
-            android:layout_marginRight="-9dp"
-            android:layout_marginTop="-3dp"
-            android:background="@drawable/shape_message_prompt"
+            android:layout_marginTop="7dp"
+            android:layout_marginLeft="-25dp"
+            android:gravity="right"
+            android:textColor="#ff772d"
+            android:textSize="12sp"
+            android:text=""
+            android:visibility="visible"/>
+
+        <TextView
+            android:id="@+id/tv_news_comment_hint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_toLeftOf="@id/tv_news_share"
             android:gravity="center_vertical"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:textColor="@color/pure_white"
-            android:textSize="10sp"
-            android:visibility="gone"/>
+            android:paddingLeft="10dp"
+            android:background="@drawable/shape_chat_input_bg"
+            android:hint="@string/stock_detail_chat_hint"/>
 
         <View
             android:layout_width="match_parent"
