--- a/elapp/src/main/res/values/styles.xml
+++ b/elapp/src/main/res/values/styles.xml
@@ -15,6 +15,12 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="item_user_info_edit">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
     <style name="item_my_setting" parent="item_user_info">
         <item name="android:orientation">horizontal</item>
         <item name="android:background">@drawable/list_item_selector</item>
